<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_blue"
    android:padding="@dimen/padding_25dp"
    tools:context=".pokemonDirectory.PokemonDirectoryFragment">

    <TextView
        android:id="@+id/appNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/pok_dex"
        android:textColor="@color/text_bold_b"
        android:textSize="@dimen/text_34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/searchTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/search_for_a_pok_mon_by_name_or_using_its_national_pok_dex_number"
        android:textColor="@color/text_small"
        android:textSize="@dimen/text_14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appNameTV" />

    <LinearLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:orientation="horizontal"
        android:padding="@dimen/margin_10dp"
        app:layout_constraintTop_toBottomOf="@id/searchTV">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchBar"
            style="@style/SearchViewStyle"
            android:layout_width="@dimen/width_0dp"
            android:queryHint="@string/name_or_number"
            android:textColorHint="@color/text_small_b"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_10dp"
            android:layout_weight="1"
            android:background="@color/search_bg" />

        <Button
            android:id="@+id/roundedButton"
            android:layout_width="@dimen/btn_50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button_background"
            android:drawablePadding="@dimen/padding_8dp"
            android:padding="@dimen/padding_10dp"
            android:text="@string/go"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/search_btn" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPokedex"
        android:layout_width="@dimen/width_0dp"
        android:layout_height="@dimen/height_0dp"
        android:layout_marginTop="@dimen/margin_20dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchLayout"
        app:spanCount="2"
        tools:itemCount="10"
        tools:listitem="@layout/pokemon_row_item" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivInternet"
        android:layout_width="@dimen/width_150dp"
        android:layout_height="@dimen/width_150dp"
        android:contentDescription="@string/internet_icon"
        android:src="@drawable/ic_internet"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/no_internet"
        android:textColor="@color/text_bold_b"
        android:textSize="@dimen/text_30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivInternet" />

</androidx.constraintlayout.widget.ConstraintLayout>